# proxymind

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  pyrightconfig.json  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  admin_eval.py  auth.py  auth_router.py  auth_schemas.py  batch_schemas.py  catalog_schemas.py  chat.py  chat_schemas.py  dependencies.py  eval_schemas.py  health.py  metrics.py  profile.py  profile_schemas.py  schemas.py  snapshot_schemas.py  source_schemas.py
backend/app/core/: config.py  constants.py  logging.py
backend/app/db/: __init__.py  base.py  engine.py  session.py
backend/app/middleware/: __init__.py  observability.py  rate_limit.py
backend/app/persona/: __init__.py  loader.py  safety.py
backend/app/scripts/: __init__.py  seed_isolated_test_stack.py
backend/app/services/: __init__.py  audit.py  auth.py  batch_embedding.py  batch_orchestrator.py  catalog.py  chat.py  chunk_hierarchy.py  citation.py  content_type.py  context_assembler.py  conversation_memory.py  docling_parser.py  document_ai_parser.py  document_processing.py  email.py  embedding.py  enrichment.py  gemini_client.py  gemini_content.py  gemini_file_transfer.py  jwt_tokens.py  lightweight_parser.py  llm.py  llm_types.py  metrics.py  passwords.py  path_router.py  product_recommendation.py  promotions.py  prompt.py  qdrant.py  query_rewrite.py  retrieval.py  snapshot.py  source.py  source_delete.py  sparse_providers.py  storage.py  telemetry.py  (+1 more)
backend/app/workers/: __init__.py  main.py  observability.py  run.py
backend/evals/: __init__.py  client.py  compare.py  config.py  judge.py  loader.py  models.py  report.py  run_evals.py  runner.py
backend/evals/datasets/: answer_quality.yaml  persona_and_refusal.yaml  retrieval_basic.yaml  retrieval_bge_m3_russian.yaml  retrieval_enrichment.yaml
backend/evals/scorers/: __init__.py  citation_accuracy.py  groundedness.py  mrr.py  persona_fidelity.py  precision.py  recall.py  refusal_quality.py
backend/evals/seed_knowledge/: biography.md  faq.md  guide.md
backend/evals/seed_persona/: BEHAVIOR.md  IDENTITY.md  SOUL.md
backend/migrations/: README  env.py
backend/migrations/versions/: 001_initial_schema.py  002_seed_default_agent.py  003_add_background_tasks_table.py  004_add_source_language_and_snapshot_draft_index.py  005_add_active_snapshot_unique_index.py  006_add_batch_embedding_support.py  007_add_parent_message_id_to_messages.py  008_add_rewritten_query_to_messages.py  009_add_path_c_processing_hint.py  010_add_session_summary_fields.py  011_add_catalog_sku_and_message_products.py  012_add_audit_log_status.py  013_add_chunk_enrichment_columns.py  014_add_chunk_parents_for_s9_02.py  015_make_chunk_parents_owner_nullable.py  016_add_chunk_parents_timestamp_defaults.py  (+2 more)
backend/tests/: conftest.py  test_database_integration.py  test_health.py
docs/: about.md  (+9 more)
(+607 files in other folders)
