[project]
name = "proxymind-backend"
version = "0.1.0"
description = "ProxyMind backend bootstrap"
requires-python = ">=3.14.3"
dependencies = [
  "alembic>=1.18.4",
  "arq>=0.27.0",
  "asyncpg>=0.31.0",
  "fastapi>=0.135.1",
  "httpx>=0.28.1",
  "litellm>=1.82.3",
  "pydantic-settings>=2.12.5",
  "redis[hiredis]>=5.3.0,<6",
  "sqlalchemy[asyncio]>=2.0.48",
  "structlog>=25.5.0",
  "tenacity>=9.1.4",
  "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.14.0",
  "testcontainers[postgres]>=4.14.2",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
